--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,8 +1,9 @@
-<header class="bg-dyelred">
-    <nav class="bg-dyelred p-2 w-full flex justify-between mx-auto md:max-w-screen-lg">
+<header class="bg-dyelred w-full">
+    <nav class="bg-dyelred p-2 w-full flex justify-between content-center mx-auto md:max-w-screen-lg">
         <div><a href="/dashboard"><img src="/img/logo_icon.svg" alt="Do you even log?" class="inline-block w-1/2"></a></div>
-        <div>
+        <div class="self-center">
             <span class="text-white text-xs md:text-sm"><%= user.userName %></span>
-            <a href="/logout" class="inline-block bg-dyelred2 text-xs text-white rounded p-1 hover:bg-red-700 md:text-sm">Log out</a></div>
+            <a href="/logout" class="inline-block bg-dyelred2 text-xs text-white rounded p-2 hover:bg-red-700 md:text-sm">Log out</a>
+        </div>
     </nav>
 </header>
