--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -35,7 +35,7 @@
             </div>
 
             <div class="pb-4">
-                <input type="submit" class="rounded border border-transparent bg-dyelred2 px-5 py-2 font-medium text-white hover:bg-red-700">
+                <input type="submit" class="rounded border border-transparent bg-dyelred2 px-5 py-2 font-medium text-white hover:bg-red-700" value="Sign Up">
             </div>
         </form>
     </div>
